--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Chandler, AZ<br>
 September 2014-February 2016</p>
 <ul>
 <li> Support Self Directed customers with service requests, new account inquiries, asset consolidation, trades and brokerage consumer portal inquiries. </li>
-          <li>Certifications: Series 7 & 63 licenses (expired)</li>
+          <li>Certifications: Series 7 and 63 licenses (expired)</li>
 </ul>
 
 <h4>Home Depot </h4>
@@ -88,7 +88,7 @@ Bachelor of Science (BS) Advertising, School of Business<p/>
 
 <h4>Paul Smith's College</h4><br>
 <p>Paul Smiths, NY<br>
-Associate of Applied Science (AAS) Hotel & Restaurant Management<p/>
+Associate of Applied Science (AAS) Hotel and Restaurant Management<p/>
 
 </body>
 
