--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ September 2005-Present</p>
 <ul>
 <li>Setup and Maintain Broadcast Equipment</li>
 <li>Manage and Maintain Audio quality, resolve any signal or connection issues</li>
-<li>Provide Statistical & News pertinent to broadcast in support of on-air talent</li>
+<li>Provide Statistical and News pertinent to broadcast in support of on-air talent</li>
 <li>Clients: Arizona Coyotes, Phoenix Radio, and Sirius/XM Satellite</li>
 </ul>
 
